--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "startDatabaseApi": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +13,6 @@
     "express": "^4.18.2",
     "md5": "^2.3.0",
     "sqlite3": "^5.1.4"
-  }
+  },
+  "type": "module"
 }
